--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Favicon -->
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" type="image/png" href="/logo.png" />
+		<link rel="icon" type="image/png" href="/favicon.svg" />
 
 		<meta property="og:title" content="uWebs - Tworzenie Stron Internetowych Bielsko-Biała | Landing Pages Beskidy" />
 		<meta
