--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
 		<meta name="robots" content="index, follow" />
 		<link rel="canonical" href="https://uwebs.pl" />
 
-		<!-- Favicon - poprawiony dla wyszukiwarek -->
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<link rel="shortcut icon" href="/favicon.ico" />
-		<link rel="apple-touch-icon" href="/favicon.svg" />
+		<!-- Favicon - zoptymalizowany dla Google -->
+		<link rel="icon" href="https://uwebs.pl/favicon-192.svg" type="image/svg+xml" sizes="192x192" />
+		<link rel="icon" href="https://uwebs.pl/favicon.svg" type="image/svg+xml" />
+		<link rel="icon" href="https://uwebs.pl/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="https://uwebs.pl/favicon.ico" />
+		<link rel="apple-touch-icon" href="https://uwebs.pl/favicon-192.svg" sizes="192x192" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="theme-color" content="#FF335F" />
 		<meta name="msapplication-TileColor" content="#FF335F" />
-		<meta name="msapplication-TileImage" content="/favicon.svg" />
+		<meta name="msapplication-TileImage" content="https://uwebs.pl/favicon-192.svg" />
 
 		<!-- Open Graph -->
 		<meta property="og:title" content="uWebs - Tworzenie Stron Internetowych Polska | Landing Pages | Strony Firmowe" />
 		<meta
 			property="og:description"
-			content="Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign. Nowoczesny design, SEO, responsywność. Konkurencyjne ceny od 3500 PLN." />
+			content="Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign. Nowoczesny design, SEO, responsywność. Konkurencyjne ceny od 500 PLN." />
 		<meta property="og:url" content="https://uwebs.pl" />
 		<meta property="og:site_name" content="uWebs" />
 		<meta property="og:locale" content="pl_PL" />
@@ -64,7 +65,7 @@
 				"name": "uWebs",
 				"description": "Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign, UX/UI design.",
 				"url": "https://uwebs.pl",
-				"logo": "https://uwebs.pl/favicon.svg",
+				"logo": "https://uwebs.pl/favicon-192.svg",
 				"email": "kontakt@uwebs.pl",
 				"address": {
 					"@type": "PostalAddress",
@@ -164,7 +165,7 @@
 								"@type": "Service",
 								"name": "Landing Pages"
 							},
-							"priceRange": "3500-7500 PLN"
+							"priceRange": "500-1000 PLN"
 						},
 						{
 							"@type": "Offer",
@@ -172,7 +173,7 @@
 								"@type": "Service",
 								"name": "Strony Firmowe"
 							},
-							"priceRange": "7500-15000 PLN"
+							"priceRange": "1000-2000 PLN"
 						},
 						{
 							"@type": "Offer",
@@ -180,7 +181,7 @@
 								"@type": "Service",
 								"name": "Sklepy Internetowe"
 							},
-							"priceRange": "15000+ PLN"
+							"priceRange": "2000+ PLN"
 						},
 						{
 							"@type": "Offer",
@@ -188,7 +189,7 @@
 								"@type": "Service",
 								"name": "Redesign Stron"
 							},
-							"priceRange": "5000-12000 PLN"
+							"priceRange": "500-1500 PLN"
 						},
 						{
 							"@type": "Offer",
@@ -196,7 +197,7 @@
 								"@type": "Service",
 								"name": "UX/UI Design"
 							},
-							"priceRange": "4000-10000 PLN"
+							"priceRange": "500-1000 PLN"
 						}
 					]
 				}
