--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 		<meta name="robots" content="index, follow" />
 		<link rel="canonical" href="https://uwebs.pl" />
 
-		<!-- Favicon - zoptymalizowany dla Google -->
-		<link rel="icon" href="https://uwebs.pl/favicon-192.svg" type="image/svg+xml" sizes="192x192" />
-		<link rel="icon" href="https://uwebs.pl/favicon.svg" type="image/svg+xml" />
-		<link rel="icon" href="https://uwebs.pl/favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="https://uwebs.pl/favicon.ico" />
-		<link rel="apple-touch-icon" href="https://uwebs.pl/favicon-192.svg" sizes="192x192" />
+		<!-- Favicon - Google Search optimized -->
+		<link rel="icon" href="/favicon-192x192.png" type="image/png" sizes="192x192" />
+		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+		<link rel="shortcut icon" href="/favicon.svg" />
+		<link rel="apple-touch-icon" href="/favicon-192x192.png" sizes="192x192" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="theme-color" content="#FF335F" />
 		<meta name="msapplication-TileColor" content="#FF335F" />
-		<meta name="msapplication-TileImage" content="https://uwebs.pl/favicon-192.svg" />
+		<meta name="msapplication-TileImage" content="/favicon-192x192.png" />
+
+		<!-- Google Search Console verification -->
+		<meta name="google-site-verification" content="" />
 
 		<!-- Open Graph -->
 		<meta property="og:title" content="uWebs - Tworzenie Stron Internetowych Polska | Landing Pages | Strony Firmowe" />
@@ -38,6 +40,13 @@
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
 		<meta property="og:image:alt" content="uWebs - Profesjonalne tworzenie stron internetowych" />
+
+		<!-- Dodatkowe meta tagi dla lepszego SEO -->
+		<meta name="application-name" content="uWebs" />
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-title" content="uWebs" />
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -65,7 +74,7 @@
 				"name": "uWebs",
 				"description": "Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign, UX/UI design.",
 				"url": "https://uwebs.pl",
-				"logo": "https://uwebs.pl/favicon-192.svg",
+				"logo": "https://uwebs.pl/favicon-192x192.png",
 				"email": "kontakt@uwebs.pl",
 				"address": {
 					"@type": "PostalAddress",
