--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       uWebs - Tworzenie Stron Internetowych Bielsko-Biała | Landing Pages
-      Beskidy
+
     </title>
     <meta
       name="description"
@@ -20,9 +20,10 @@
     <link rel="canonical" href="https://uwebs.pl" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo-192.png" />
+    
 
     <meta
       property="og:title"
@@ -44,10 +45,7 @@
       rel="stylesheet"
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:image" content="https://uwebs.pl/og_image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -68,7 +66,7 @@
         "name": "uWebs",
         "description": "Profesjonalne tworzenie stron internetowych Bielsko-Biała, Żywiec, Beskidy",
         "url": "https://uwebs.pl",
-        "logo": "https://uwebs.pl/logo.png",
+        "logo": "https://uwebs.pl/logo-192.png",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+48-123-456-789",
@@ -217,13 +215,6 @@
           "https://www.linkedin.com/company/uwebs",
           "https://www.instagram.com/uwebs"
         ],
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "5.0",
-          "reviewCount": "15",
-          "bestRating": "5",
-          "worstRating": "1"
-        }
       }
     </script>
 
