--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       uWebs - Tworzenie Stron Internetowych Bielsko-Biała | Landing Pages
-
     </title>
     <meta
       name="description"
@@ -25,10 +24,9 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    
 
-		<!-- Google Search Console verification -->
-		<meta name="google-site-verification" content="" />
+    <!-- Google Search Console verification -->
+    <meta name="google-site-verification" content="" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,213 +37,214 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://uwebs.pl/og_image.png" />
-		<!-- Open Graph -->
-		<meta property="og:title" content="uWebs - Tworzenie Stron Internetowych Polska | Landing Pages | Strony Firmowe" />
-		<meta
-			property="og:description"
-			content="Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign. Nowoczesny design, SEO, responsywność. Konkurencyjne ceny od 500 PLN." />
-		<meta property="og:url" content="https://uwebs.pl" />
-		<meta property="og:site_name" content="uWebs" />
-		<meta property="og:locale" content="pl_PL" />
-		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://uwebs.pl/og-image.jpg" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
-		<meta property="og:image:alt" content="uWebs - Profesjonalne tworzenie stron internetowych" />
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="uWebs - Tworzenie Stron Internetowych Polska | Landing Pages | Strony Firmowe"
+    />
+    <meta
+      property="og:description"
+      content="Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign. Nowoczesny design, SEO, responsywność. Konkurencyjne ceny od 500 PLN."
+    />
+    <meta property="og:url" content="https://uwebs.pl" />
+    <meta property="og:site_name" content="uWebs" />
+    <meta property="og:locale" content="pl_PL" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://uwebs.pl/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="uWebs - Profesjonalne tworzenie stron internetowych"
+    />
 
-		<!-- Dodatkowe meta tagi dla lepszego SEO -->
-		<meta name="application-name" content="uWebs" />
-		<meta name="mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
-		<meta name="apple-mobile-web-app-title" content="uWebs" />
+    <!-- Dodatkowe meta tagi dla lepszego SEO -->
+    <meta name="application-name" content="uWebs" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="uWebs" />
 
-		<!-- Twitter -->
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta
-			name="twitter:title"
-			content="uWebs - Tworzenie Stron Internetowych Polska | Landing Pages | Strony Firmowe" />
-		<meta
-			name="twitter:description"
-			content="Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign. Nowoczesny design, SEO, responsywność. Konkurencyjne ceny od 500 PLN." />
-		<meta name="twitter:image" content="https://uwebs.pl/og-image.jpg" />
-		<meta name="twitter:image:alt" content="uWebs - Profesjonalne tworzenie stron internetowych" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Inter:wght@400;500;600&family=DM+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-		<!-- Google Fonts -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Inter:wght@400;500;600&family=DM+Mono:wght@400;700&display=swap"
-			rel="stylesheet" />
+    <!-- Structured Data - Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "uWebs",
+        "description": "Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign, UX/UI design.",
+        "url": "https://uwebs.pl",
+        "logo": "https://uwebs.pl/favicon-192x192.png",
+        "email": "kontakt@uwebs.pl",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "PL"
+        },
+        "areaServed": [
+          {
+            "@type": "Country",
+            "name": "Polska"
+          }
+        ],
+        "serviceType": [
+          "Tworzenie stron internetowych",
+          "Projektowanie stron internetowych",
+          "Landing pages",
+          "Strony firmowe",
+          "Strony wizytówkowe",
+          "Sklepy internetowe",
+          "E-commerce",
+          "Web design",
+          "UX/UI Design",
+          "Redesign stron",
+          "Modernizacja stron",
+          "SEO",
+          "Optymalizacja stron",
+          "Responsive design",
+          "Mobile-first design",
+          "Frontend development",
+          "Fullstack development",
+          "CMS",
+          "WordPress",
+          "React development",
+          "Vue.js development",
+          "JavaScript development",
+          "HTML/CSS coding",
+          "Website maintenance",
+          "Technical support",
+          "Website security",
+          "Performance optimization",
+          "Digital marketing",
+          "Content management",
+          "API integration",
+          "Custom development"
+        ],
+        "priceRange": "500-5000 PLN",
+        "paymentAccepted": ["Cash", "Credit Card", "Bank Transfer"],
+        "currenciesAccepted": "PLN",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "sameAs": [
+          "https://www.linkedin.com/company/uwebs",
+          "https://www.instagram.com/uwebs"
+        ]
+      }
+    </script>
 
-		<!-- Structured Data - Organization -->
-		<script type="application/ld+json">
-			{
-				"@context": "https://schema.org",
-				"@type": "Organization",
-				"name": "uWebs",
-				"description": "Profesjonalne tworzenie stron internetowych w całej Polsce. Landing pages, strony firmowe, sklepy online, redesign, UX/UI design.",
-				"url": "https://uwebs.pl",
-				"logo": "https://uwebs.pl/favicon-192x192.png",
-				"email": "kontakt@uwebs.pl",
-				"address": {
-					"@type": "PostalAddress",
-					"addressCountry": "PL"
-				},
-				"areaServed": [
-					{
-						"@type": "Country",
-						"name": "Polska"
-					}
-				],
-				"serviceType": [
-					"Tworzenie stron internetowych",
-					"Projektowanie stron internetowych",
-					"Landing pages",
-					"Strony firmowe",
-					"Strony wizytówkowe",
-					"Sklepy internetowe",
-					"E-commerce",
-					"Web design",
-					"UX/UI Design",
-					"Redesign stron",
-					"Modernizacja stron",
-					"SEO",
-					"Optymalizacja stron",
-					"Responsive design",
-					"Mobile-first design",
-					"Frontend development",
-					"Fullstack development",
-					"CMS",
-					"WordPress",
-					"React development",
-					"Vue.js development",
-					"JavaScript development",
-					"HTML/CSS coding",
-					"Website maintenance",
-					"Technical support",
-					"Website security",
-					"Performance optimization",
-					"Digital marketing",
-					"Content management",
-					"API integration",
-					"Custom development"
-				],
-				"priceRange": "500-5000 PLN",
-				"paymentAccepted": ["Cash", "Credit Card", "Bank Transfer"],
-				"currenciesAccepted": "PLN",
-				"openingHours": "Mo-Fr 09:00-18:00",
-				"sameAs": ["https://www.linkedin.com/company/uwebs", "https://www.instagram.com/uwebs"]
-			}
-		</script>
+    <!-- Structured Data - WebSite -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "uWebs",
+        "url": "https://uwebs.pl",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://uwebs.pl/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
 
-		<!-- Structured Data - WebSite -->
-		<script type="application/ld+json">
-			{
-				"@context": "https://schema.org",
-				"@type": "WebSite",
-				"name": "uWebs",
-				"url": "https://uwebs.pl",
-				"potentialAction": {
-					"@type": "SearchAction",
-					"target": "https://uwebs.pl/search?q={search_term_string}",
-					"query-input": "required name=search_term_string"
-				}
-			}
-		</script>
+    <!-- Structured Data - Service -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "name": "Tworzenie Stron Internetowych",
+        "description": "Profesjonalne tworzenie landing pages, stron firmowych i sklepów internetowych w całej Polsce",
+        "provider": {
+          "@type": "Organization",
+          "name": "uWebs"
+        },
+        "areaServed": {
+          "@type": "Country",
+          "name": "Polska"
+        },
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "name": "Usługi Web Design",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Landing Pages"
+              },
+              "priceRange": "500-1000 PLN"
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Strony Firmowe"
+              },
+              "priceRange": "1000-2000 PLN"
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Sklepy Internetowe"
+              },
+              "priceRange": "2000+ PLN"
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Redesign Stron"
+              },
+              "priceRange": "500-1500 PLN"
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "UX/UI Design"
+              },
+              "priceRange": "500-1000 PLN"
+            }
+          ]
+        }
+      }
+    </script>
 
-		<!-- Structured Data - Service -->
-		<script type="application/ld+json">
-			{
-				"@context": "https://schema.org",
-				"@type": "Service",
-				"name": "Tworzenie Stron Internetowych",
-				"description": "Profesjonalne tworzenie landing pages, stron firmowych i sklepów internetowych w całej Polsce",
-				"provider": {
-					"@type": "Organization",
-					"name": "uWebs"
-				},
-				"areaServed": {
-					"@type": "Country",
-					"name": "Polska"
-				},
-				"hasOfferCatalog": {
-					"@type": "OfferCatalog",
-					"name": "Usługi Web Design",
-					"itemListElement": [
-						{
-							"@type": "Offer",
-							"itemOffered": {
-								"@type": "Service",
-								"name": "Landing Pages"
-							},
-							"priceRange": "500-1000 PLN"
-						},
-						{
-							"@type": "Offer",
-							"itemOffered": {
-								"@type": "Service",
-								"name": "Strony Firmowe"
-							},
-							"priceRange": "1000-2000 PLN"
-						},
-						{
-							"@type": "Offer",
-							"itemOffered": {
-								"@type": "Service",
-								"name": "Sklepy Internetowe"
-							},
-							"priceRange": "2000+ PLN"
-						},
-						{
-							"@type": "Offer",
-							"itemOffered": {
-								"@type": "Service",
-								"name": "Redesign Stron"
-							},
-							"priceRange": "500-1500 PLN"
-						},
-						{
-							"@type": "Offer",
-							"itemOffered": {
-								"@type": "Service",
-								"name": "UX/UI Design"
-							},
-							"priceRange": "500-1000 PLN"
-						}
-					]
-				}
-			}
-		</script>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-WQKLNLBD");
+    </script>
+    <!-- End Google Tag Manager -->
+  </head>
 
-		<!-- Google Tag Manager -->
-		<script>
-			;(function (w, d, s, l, i) {
-				w[l] = w[l] || []
-				w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
-				var f = d.getElementsByTagName(s)[0],
-					j = d.createElement(s),
-					dl = l != 'dataLayer' ? '&l=' + l : ''
-				j.async = true
-				j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-				f.parentNode.insertBefore(j, f)
-			})(window, document, 'script', 'dataLayer', 'GTM-WQKLNLBD')
-		</script>
-		<!-- End Google Tag Manager -->
-	</head>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WQKLNLBD"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-	<body>
-		<!-- Google Tag Manager (noscript) -->
-		<noscript>
-			<iframe
-				src="https://www.googletagmanager.com/ns.html?id=GTM-WQKLNLBD"
-				height="0"
-				width="0"
-				style="display: none; visibility: hidden"></iframe>
-		</noscript>
-		<!-- End Google Tag Manager (noscript) -->
-
-		<div id="root"></div>
-		<script type="module" src="/src/main.tsx"></script>
-	</body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
